[package]
name = "homomorphic_game_of_life"
version = "0.1.0"
edition = "2021"

[dependencies]
#concrete = { version = "0.2.0-beta", features = ["integers"]}
concrete = {git ="https://github.com/zama-ai/concrete", branch = "scalar_eq", features = ["shortints", "serde"]}
bincode = "1.3.3"

[profile.release]
lto = "fat"
