[package]
name = "homomorphic_game_of_life_2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tfhe = { version = "0.3.1", features = ["shortint", "x86_64-unix"] }
bincode = "1.3.3"

[profile.release]
lto = "fat"
