[package]
name = "homomorphic_game_of_life_2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tfhe = { version = "0.4.0", features = ["shortint", "x86_64-unix"] , path = "../tfhe-rs-internal/tfhe" }
bincode = "1.3.3"
rayon = "1.7.0"
itertools = "0.11.0"
rand = "0.8.5"

[profile.release]
lto = "fat"
